# stage_darc

./: CMakeLists.txt  stack.yaml
include/stage_darc/: stage_robot.h
src/: stage_component.cpp  stage_node.cpp
world/: pioneer.inc  simple.world
